welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:6: error: Invalid literal number
    if (nums(i)>2nd){
                ^max2Value:6: error: ')' expected but something found.
    if (nums(i)>2nd){
                ^max2Value:14: error: illegal start of simple expression
    }
    ^