welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int = {
  var max:Int=nums(0)
  var deux:Int=nums(0)
  val n:Int = nums.length
  for (i<-0 to n-1){
    if (nums(i)>2nd){
      if (nums(i)> max){
        max=nums(i)
      }
      else{
        deux= nums(i)
      }
    }
    }
  return deux
  }